[package]
name = "ccbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
rand = "0.9.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.142"
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["full"] }
